--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="result"></div>
+    <div id="result-2"></div>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
